Fix game floating button visibility with cookie banners

--- a/assets/css/components/game/_gameFloatingButton.scss
+++ b/assets/css/components/game/_gameFloatingButton.scss
@@ -7,7 +7,7 @@
 	border-radius: 50%;
 	width: 5rem;
 	height: 5rem;
-	z-index: 999999;
+	z-index: 99;
 	background-color: var(--color-primary);
 	visibility: hidden;
 	opacity: 0;
